package com.ivivisoft.strategy.template;

/**
 * Created by andy on 2017/5/14.
 */
public class ConcreteStrategyB implements Strategy {
    @Override
    public void algorithmInterface() {

    }
}
