package com.ivivisoft.strategy.template;

/**
 * Created by andy on 2017/5/14.
 */
public interface Strategy {
    void algorithmInterface();
}
